# Games

./: .gitignore
Games101/Assignment1/: CMakeLists.txt
Games101/Assignment1/src/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
