cmake_minimum_required(VERSION 3.31.5)
project(Rasterizer VERSION 0.1.0 LANGUAGES C CXX)
set(OpenCV_DIR $ENV{OpenCV_DIR}/lib)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("../../Eigen")
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
file(GLOB_RECURSE SOURCES ${SOURCE_DIR}/*.cpp)
add_executable(Rasterizer ${SOURCES})
target_link_libraries(Rasterizer ${OpenCV_LIBS})